...
    func configure(model: [Comic]) {
        var info = ""
        for item in model {
            info += "\(item.name)\n"
        }
        infoLabel.text = info
        titleLabel.text = "COMICS"
    }
    
    func configure(model: [Serie]) {
        var info = ""
        for item in model {
            info += "\(item.name)\n"
        }
        infoLabel.text = info
        titleLabel.text = "SERIES"
    }
}


